# super_calculator

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: build.yaml
src/: browser.rs  calculator.rs  engine.rs  lib.rs
src/browser/: closure.rs  document.rs  element.rs  event.rs  html_element.rs  html_select_element.rs  input_element.rs  node.rs  node_list.rs  window.rs
src/calculator/: ast.rs  expression.rs  format.rs  fraction.rs  history.rs  node.rs  num.rs  operator.rs  paren.rs  setup.rs  term.rs  variable_button.rs  variable_manager.rs
src/calculator/expression/: calculate.rs  display.rs  parse.rs
src/engine/: element.rs  event.rs  html_element.rs  html_input_element.rs  html_select_element.rs  keyboard_event.rs  node.rs  node_list.rs
static/: index.html  styles.css
