# You must change these to your own details.
[package]
name = "super_calculator"
description = "Super calculator for various calculations"
version = "0.7.0"
authors = ["kota"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.87"

console_error_panic_hook = "0.1.7"
anyhow = "1.0.75"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
num = "0.4.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Window",
    "Document",
    "DomTokenList",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
js-sys = "0.3.22"
